src/validation/tests/snapshots/rusty__validation__tests__statement_validation_tests__string_compare_function_with_wrong_signature_causes_error.snap
---
source: src/validation/tests/statement_validation_tests.rs
expression: "&diagnostics"
---
error[E073]: Missing compare function 'FUNCTION STRING_EQUAL : BOOL VAR_INPUT a,b : STRING; END_VAR ...'.
  ┌─ <internal>:5:13
  │
5 │             'a' =  'b'; // missing compare function :-(
  │             ^^^^^^^^^^ Missing compare function 'FUNCTION STRING_EQUAL : BOOL VAR_INPUT a,b : STRING; END_VAR ...'.
